Enable prettier option proseWrap: always (#31)

--- a/blog/2019-10-09-coredump-status.mdx
+++ b/blog/2019-10-09-coredump-status.mdx
@@ -13,4 +13,5 @@ errors, and which Issue they were attached to.
 
 ## Last Seen Updated Fixes
 
-Memfault will now set the "Last Seen" field when it receives a coredump from a device. Previously this was only updated when metrics and events were received.
+Memfault will now set the "Last Seen" field when it receives a coredump from a
+device. Previously this was only updated when metrics and events were received.
