--- a/blog/2020-03-30.mdx
+++ b/blog/2020-03-30.mdx
@@ -4,8 +4,9 @@ title: March Updates
 
 ## Issue Reason Filter Multi-Select
 
-You can now filter by multiple Issue reasons at once. The filtering will persist in the browser's localStorage and
-will propagate to the URL so that you can send links to your co-workers of your favorite queries.
+You can now filter by multiple Issue reasons at once. The filtering will persist
+in the browser's localStorage and will propagate to the URL so that you can send
+links to your co-workers of your favorite queries.
 
 <p align="center">
   <img
@@ -17,8 +18,9 @@ will propagate to the URL so that you can send links to your co-workers of your 
 
 ## Device Metrics Zoom and Normalize
 
-We have added a zoom feature for the Device Metrics, as well as the ability to normalize the Y-axis units. This is useful
-for digging into a particular moment in time and comparing similar metrics.
+We have added a zoom feature for the Device Metrics, as well as the ability to
+normalize the Y-axis units. This is useful for digging into a particular moment
+in time and comparing similar metrics.
 
 <p align="center">
   <img
@@ -35,8 +37,11 @@ for digging into a particular moment in time and comparing similar metrics.
 - Improve page load times for the Issues list.
 - Add "Devices Impacted (Last 72 Hours)" to the Alerts page.
 - Show title for Traces in the Device Detail page on embedded projects.
-- Fix issue that would cause an infinite loop in the frontend memory region parser.
+- Fix issue that would cause an infinite loop in the frontend memory region
+  parser.
 
 ## Firmware SDK Changes
 
-Check out the [Memfault Firmware SDK changelog](https://github.com/memfault/memfault-firmware-sdk/blob/master/CHANGES.md) for further changes.
+Check out the
+[Memfault Firmware SDK changelog](https://github.com/memfault/memfault-firmware-sdk/blob/master/CHANGES.md)
+for further changes.
