--- a/blog/2020-04-20.mdx
+++ b/blog/2020-04-20.mdx
@@ -5,12 +5,15 @@ title: April Updates
 Memfault Changelog for April
 
 :::note
+
 The changelog is now separated into 3 sections: Embedded, Android, and General.
+
 :::
 
 ## Embedded
 
-- Add support for showing logs in the Issue detail view if the device is compiled and uses the Memfault Logging SDK.
+- Add support for showing logs in the Issue detail view if the device is
+  compiled and uses the Memfault Logging SDK.
   <p align="center">
     <img
       width="400"
@@ -26,7 +29,8 @@ The changelog is now separated into 3 sections: Embedded, Android, and General.
 
 ## Android
 
-- In the Timeline view, Memfault shows the "Foreground Activity" at any given time
+- In the Timeline view, Memfault shows the "Foreground Activity" at any given
+  time
   <p align="center">
     <img
       width="400"
@@ -41,9 +45,12 @@ The changelog is now separated into 3 sections: Embedded, Android, and General.
 
 ## General
 
-- Allow cross-region S3 uploads to speed up initial uploads. If this is a requirement, please contact us
+- Allow cross-region S3 uploads to speed up initial uploads. If this is a
+  requirement, please contact us
 - Performance improvements when sorting on the Issues view
 
 ## Firmware SDK Changes
 
-Check out the [Memfault Firmware SDK changelog](https://github.com/memfault/memfault-firmware-sdk/blob/master/CHANGES.md) for further changes.
+Check out the
+[Memfault Firmware SDK changelog](https://github.com/memfault/memfault-firmware-sdk/blob/master/CHANGES.md)
+for further changes.
