--- a/docs/android/android-data-scrubbing.mdx
+++ b/docs/android/android-data-scrubbing.mdx
@@ -15,9 +15,11 @@ Scrubbing**.
 ## Allowed Application IDs
 
 :::note
+
 Memfault will start filtering by _Allowed Patterns_ when the first _Allowed
 Pattern_ rule is added, so it is important to add a comprehensive set of
 _Allowed Patterns_.
+
 :::
 
 The first processing step applied is to include log lines _only_ from
@@ -48,8 +50,10 @@ com.android.*
 ## Text Scrubbing
 
 :::note
-Text scrubbing rules will only be applied if one or more _Allowed Pattern_
-have been added.
+
+Text scrubbing rules will only be applied if one or more _Allowed Pattern_ have
+been added.
+
 :::
 
 Memfault can also perform additional scrubbing of logs that may appear to
