--- a/docs/android/android-eventlog-metrics.mdx
+++ b/docs/android/android-eventlog-metrics.mdx
@@ -196,8 +196,10 @@ python2 java-event-log-tags.py \
 ```
 
 :::note
-As of March 2020, the script was not yet Python 3.x compatible and
-required Python 2.x to run.
+
+As of March 2020, the script was not yet Python 3.x compatible and required
+Python 2.x to run.
+
 :::
 
 We recommend running the script as part of your app's Gradle build.
