--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -51,13 +51,15 @@ property to `<YOUR_BORT_APPLICATION_ID>`.
 ### Add the SDK Components to your build
 
 :::note
+
 We recommend placing the `include`s below at the _end_ of the respective
 `Makefile`s. This is because `include` directives are used to _append_ to
 variables in the build script; placing them at the end of the file reduces the
-chances that subsequent lines in the `Makefile` do not redefine those
-variables and discard the effect of the `include`. If it is not possible to
-place the `include` at the end of the file, ensure that the respective
-variables are not redefined (look for the `:=` syntax).
+chances that subsequent lines in the `Makefile` do not redefine those variables
+and discard the effect of the `include`. If it is not possible to place the
+`include` at the end of the file, ensure that the respective variables are not
+redefined (look for the `:=` syntax).
+
 :::
 
 Add this line to your `device.mk` file to get the components included in your
@@ -81,14 +83,16 @@ include vendor/memfault/bort/BoardConfig.mk
 `MemfaultPackages/bort.properties`; the app will not compile without this
 property.
 
-We also recommend updating the other properties as necessary, for
-example, updating the SDK levels to match the API level of your OS and updating
-the build tools version to what is available in your environment.
+We also recommend updating the other properties as necessary, for example,
+updating the SDK levels to match the API level of your OS and updating the build
+tools version to what is available in your environment.
 
-If your devices will have [Google Mobile Services (GMS)](https://www.android.com/intl/en_ca/gms/)
-and must run the [Compatibility Test Suite (CTS)](https://source.android.com/compatibility/cts),
-you may need to **update the Bort target SDK version** to match the API level of your OS.
-This can be done by updating the `TARGET_SDK_VERSION` property in
+If your devices will have
+[Google Mobile Services (GMS)](https://www.android.com/intl/en_ca/gms/) and must
+run the
+[Compatibility Test Suite (CTS)](https://source.android.com/compatibility/cts),
+you may need to **update the Bort target SDK version** to match the API level of
+your OS. This can be done by updating the `TARGET_SDK_VERSION` property in
 `MemfaultPackages/bort.properties`.
 
 Additional settings can be configured via the Bort SDK over-the-air
