--- a/docs/android/android-reboot-events.mdx
+++ b/docs/android/android-reboot-events.mdx
@@ -5,10 +5,12 @@ sidebar_label: Reboot Events
 ---
 
 :::note Prerequisite
-For best results with this feature, we recommend using at least
-the 3.0 version of the [Bort SDK](/docs/android/android-bort). Check out the
-[getting started guide](/docs/android/android-getting-started-guide) for
-details on integrating the latest version.
+
+For best results with this feature, we recommend using at least the 3.0 version
+of the [Bort SDK](/docs/android/android-bort). Check out the
+[getting started guide](/docs/android/android-getting-started-guide) for details
+on integrating the latest version.
+
 :::
 
 The Memfault Bort SDK can track when your device reboots and upload an event
