--- a/docs/android/introduction.mdx
+++ b/docs/android/introduction.mdx
@@ -59,8 +59,8 @@ For a detailed integration guide, see the
 To symbolicate native and ANR traces, as well as deobfuscate android traces,
 Memfault provides a CLI tool that can be integrated into your build system to
 upload the required symbols and mappings, respectively. See
-[Uploading Android Bug Reports and Symbols](uploading-android-bugreports.mdx) for
-more information.
+[Uploading Android Bug Reports and Symbols](uploading-android-bugreports.mdx)
+for more information.
 
 To track additional or custom metrics on your platform, see our guide on
 [Collecting Device Metrics](android-eventlog-metrics.mdx).
