--- a/docs/ci/install-memfault-cli.mdx
+++ b/docs/ci/install-memfault-cli.mdx
@@ -18,9 +18,11 @@ The Memfault CLI tool is written in Python and published publicly in the
 To install it, make sure you have a recent version of Python 3.x installed.
 
 :::tip
+
 Use a
 [virtualenv](https://packaging.python.org/tutorials/installing-packages/#creating-virtual-environments)
 to avoid conflicts with dependencies of other projects that use Python.
+
 :::
 
 Then run `pip3 install memfault-cli` to install it.
@@ -51,9 +53,11 @@ Commands:
 ### Example Usage: Uploading Firmware Symbols
 
 :::caution
-Uploading symbols requires your "User API Key". To locate the token
-navigate to the "Settings" -> "General" page in the Memfault UI and copy/paste
-the token in the "User API Key" section.
+
+Uploading symbols requires your "User API Key". To locate the token navigate to
+the "Settings" -> "General" page in the Memfault UI and copy/paste the token in
+the "User API Key" section.
+
 :::
 
 ```bash
@@ -67,6 +71,7 @@ $ memfault --email ${YOUR_EMAIL} --password ${YOUR_USER_API_KEY} \
 ```
 
 :::note Tip
+
 If you are going to be working with the same project you can add standard
 arguments as environment variables to your shell init file or via the command
 line:
