--- a/docs/embedded/arm-cortex-m-guide.mdx
+++ b/docs/embedded/arm-cortex-m-guide.mdx
@@ -27,8 +27,9 @@ import RebootTrackingDependency from "./steps/reboot-tracking-dependency.mdx";
 
 ## Overview
 
-The following guide will walk you through step-by-step how to integrate and test the Memfault SDK
-for a Cortex-M device using the GNU GCC, Clang, IAR, ARM MDK, or TI ARM Compiler.
+The following guide will walk you through step-by-step how to integrate and test
+the Memfault SDK for a Cortex-M device using the GNU GCC, Clang, IAR, ARM MDK,
+or TI ARM Compiler.
 
 <FwSdkFeatures />
 
@@ -82,8 +83,8 @@ for a Cortex-M device using the GNU GCC, Clang, IAR, ARM MDK, or TI ARM Compiler
 
 ### Confirm Integration Links
 
-At this point your project should compile and be able to boot.
-On startup you should see some messaging like:
+At this point your project should compile and be able to boot. On startup you
+should see some messaging like:
 
 ```
 [I] MFLT: Memfault Build ID: d8d6a047282f025fffa29fa767100f310bc40f80
@@ -91,7 +92,8 @@ On startup you should see some messaging like:
 
 ## Verification & Tuning Steps
 
-With Memfault compiling into your build, it's now time to add some initial instrumentation, and test the integration!
+With Memfault compiling into your build, it's now time to add some initial
+instrumentation, and test the integration!
 
 ### Define First Trace Event
 
@@ -119,8 +121,8 @@ With Memfault compiling into your build, it's now time to add some initial instr
 
 ## Data Transport Steps
 
-With data collection verified locally, the final step is to push data automatically to the Memfault
-cloud for analysis.
+With data collection verified locally, the final step is to push data
+automatically to the Memfault cloud for analysis.
 
 ### Push Data to Cloud over Device Transport
 
