--- a/docs/embedded/arm-mdk-guide.mdx
+++ b/docs/embedded/arm-mdk-guide.mdx
@@ -88,8 +88,8 @@ void memfault_platform_reboot(void) {
 ### Publish data to the Memfault cloud
 
 Extensive details about how data from the Memfault SDK makes it to the cloud can
-be found [here](data-from-firmware-to-cloud.mdx). In short, all data is published
-via the same "chunk" REST
+be found [here](data-from-firmware-to-cloud.mdx). In short, all data is
+published via the same "chunk" REST
 [endpoint](https://api-docs.memfault.com/?version=latest#66b0e390-2c3e-4c0d-b6c2-836a287b9e5f).
 
 ```c
