--- a/docs/embedded/coredumps.mdx
+++ b/docs/embedded/coredumps.mdx
@@ -11,9 +11,11 @@ a system that is using the
 (GCC) compiler.
 
 :::note Prerequisite
-This guide assumes you have already completed the minimal
-integration of the Memfault SDK. If you have not, check out the
+
+This guide assumes you have already completed the minimal integration of the
+Memfault SDK. If you have not, check out the
 [getting started section](/docs/embedded/introduction#getting-started).
+
 :::
 
 ## Integration Steps
