--- a/docs/embedded/self-serve.mdx
+++ b/docs/embedded/self-serve.mdx
@@ -53,8 +53,8 @@ import PostChunksLocally from "./steps/post-chunks-locally.mdx";
 
 ### Confirm Integration Links
 
-At this point your project should compile and be able to boot.
-On startup you should see some messaging like:
+At this point your project should compile and be able to boot. On startup you
+should see some messaging like:
 
 ```
 [I] MFLT: Memfault Build ID: d8d6a047282f025fffa29fa767100f310bc40f80
