--- a/docs/embedded/steps/add-cli-test-commands.mdx
+++ b/docs/embedded/steps/add-cli-test-commands.mdx
@@ -1,8 +1,10 @@
 The Memfault SDK functionality can be easily exercised via CLI test commands.
 
 :::note
-If your platform does not have a CLI, these commands can also be
-wired up to a button press or called from `main()` on bootup from a test image
+
+If your platform does not have a CLI, these commands can also be wired up to a
+button press or called from `main()` on bootup from a test image
+
 :::
 
 ```c
