--- a/docs/embedded/steps/arch-dependencies.mdx
+++ b/docs/embedded/steps/arch-dependencies.mdx
@@ -1,4 +1,5 @@
-Memfault has a few architecture specific dependencies that need to be implemented.
+Memfault has a few architecture specific dependencies that need to be
+implemented.
 
 ```c
 //! @file memfault_platform_port.c
