--- a/docs/embedded/steps/data-transfer-troubleshooting.mdx
+++ b/docs/embedded/steps/data-transfer-troubleshooting.mdx
@@ -1,4 +1,5 @@
-If you encounter any issues in your data transfer implementation, Memfault has tools to help debug!
+If you encounter any issues in your data transfer implementation, Memfault has
+tools to help debug!
 
 - A UI you can use to
   [view the raw "Chunk" data payloads](/docs/embedded/test-patterns-for-chunks-endpoint#troubleshooting)
