--- a/docs/embedded/steps/define-first-trace-event.mdx
+++ b/docs/embedded/steps/define-first-trace-event.mdx
@@ -1,5 +1,6 @@
-Trace events are used for generating alerts in the Memfault UI when unexpected events
-are encountered. Let's start by creating a generic type for critical errors that have been detected.
+Trace events are used for generating alerts in the Memfault UI when unexpected
+events are encountered. Let's start by creating a generic type for critical
+errors that have been detected.
 
 ```c
 --- a/config/memfault_trace_reason_user_config.def
