--- a/docs/embedded/steps/metric-timer-dependency.mdx
+++ b/docs/embedded/steps/metric-timer-dependency.mdx
@@ -1,4 +1,5 @@
-The memfault metric subsystem requires a repeating timer in order to collect "heartbeats" and a time since boot
+The memfault metric subsystem requires a repeating timer in order to collect
+"heartbeats" and a time since boot
 
 <details>
 
