--- a/docs/embedded/steps/post-chunks-locally.mdx
+++ b/docs/embedded/steps/post-chunks-locally.mdx
@@ -1,9 +1,11 @@
-Prior to having an end-to-end transport in place, Memfault data can be
-exported over any serial connection or via GDB directly.
+Prior to having an end-to-end transport in place, Memfault data can be exported
+over any serial connection or via GDB directly.
 
 :::note
-This strategy can also be used even when an end-to-end transport is in place
-for local QA testing or in CI/CD test automation setups.
+
+This strategy can also be used even when an end-to-end transport is in place for
+local QA testing or in CI/CD test automation setups.
+
 :::
 
 #### Add a CLI command to Export Data
