--- a/docs/embedded/steps/register-assert.mdx
+++ b/docs/embedded/steps/register-assert.mdx
@@ -1,5 +1,5 @@
-Memfault can automatically capture crash information on asserts by calling `MEMFAULT_ASSERT()` from your
-platforms assert handler:
+Memfault can automatically capture crash information on asserts by calling
+`MEMFAULT_ASSERT()` from your platforms assert handler:
 
 ```c
 #include "memfault/panics/assert.h"
