--- a/docs/embedded/steps/rtos-ports.mdx
+++ b/docs/embedded/steps/rtos-ports.mdx
@@ -1,5 +1,6 @@
 The Memfault SDK includes pre-canned integrations for many RTOS environments.
-Expand the tab for the one applies to your system below in order to pick them up.
+Expand the tab for the one applies to your system below in order to pick them
+up.
 
 <details>
 
@@ -23,6 +24,7 @@ Expand the tab for the one applies to your system below in order to pick them up
 ```
 
 :::tip
+
 While in the file, we recommend using the following settings to catch issues:
 
 ```
