--- a/docs/embedded/steps/timer-dependencies.mdx
+++ b/docs/embedded/steps/timer-dependencies.mdx
@@ -1,5 +1,5 @@
-Memfault requires one timer to trigger generation of "heartbeats" and to measure durations. The
-following APIs must be implemented by the platform.
+Memfault requires one timer to trigger generation of "heartbeats" and to measure
+durations. The following APIs must be implemented by the platform.
 
 ```c
 //! @file memfault_platform_port.c
