--- a/docs/embedded/trace-events.mdx
+++ b/docs/embedded/trace-events.mdx
@@ -28,9 +28,11 @@ errors and invalid message IDs:
 <br />
 
 :::note Prerequisite
-This guide assumes you have already completed the minimal port
-of the Memfault SDK. If you have not, check out the
+
+This guide assumes you have already completed the minimal port of the Memfault
+SDK. If you have not, check out the
 [getting started section](/docs/embedded/introduction#getting-started).
+
 :::
 
 ### 1. Create trace reasons definition file
