--- a/docs/platform/components/invite-new-users.mdx
+++ b/docs/platform/components/invite-new-users.mdx
@@ -1,4 +1,5 @@
-To invite a new member, go to **Admin → Invites**. You can add a role of user, admin, or support. The default is "user" in case you omit it.
+To invite a new member, go to **Admin → Invites**. You can add a role of user,
+admin, or support. The default is "user" in case you omit it.
 
 <p align="center">
   <img
