--- a/blog/2021-01-31.mdx
+++ b/blog/2021-01-31.mdx
@@ -4,7 +4,9 @@ title: January Updates
 
 ## Issue Merging
 
-Make your Issue list more organized and concise with the new Issue merging feature! Users can now merge Issues together by clicking the Merge button on the detail page of an Issue and then selecting which Issue to be its parent.
+Make your Issue list more organized and concise with the new Issue merging
+feature! Users can now merge Issues together by clicking the Merge button on the
+detail page of an Issue and then selecting which Issue to be its parent.
 
 <p align="center">
   <img width="600" src="/img/blog/2021-01-31-issue-merging.gif" />
@@ -18,7 +20,8 @@ This feature is available for both Android and Real-Time products.
 
 ## New Bulk Device Import
 
-Large numbers of devices can now be provisioned and added to cohorts at once via CSV upload.
+Large numbers of devices can now be provisioned and added to cohorts at once via
+CSV upload.
 
 <p align="center">
   <img width="600" src="/img/blog/2021-01-31-device-csv-upload.gif" />
@@ -26,17 +29,26 @@ Large numbers of devices can now be provisioned and added to cohorts at once via
 
 ## Real-Time
 
-- You can now download a Coredump as an .elf file, which can then be loaded into GDB as long as your version of GDB is compiled with core dump support. For more information, [reference the docs](https://mflt.io/coredump-elf-with-gdb).
+- You can now download a Coredump as an .elf file, which can then be loaded into
+  GDB as long as your version of GDB is compiled with core dump support. For
+  more information, [reference the docs](https://mflt.io/coredump-elf-with-gdb).
 
 <p align="center">
   <img width="600" src="/img/blog/2021-01-31-download-coredump.png" />
 </p>
 
-- Full support for the ESP8266 (Tensilica Xtensa LX106) MCU architecture was added! A step-by-step integration guide can be found [here](https://mflt.io/esp8266-tutorial)
-- Add a convenience header to the SDK which allows users to include a single header, `#include "memfault/components.h"`.
-- In cases where a device generates both a Trace Event and a Coredump, the chances of receiving two emails and two new Issues is reduced. They should be de-duplicated.
-- Fix an issue with compatibility around FreeRTOS, the FPU, and the IAR compiler.
-- Improved support for STM32L4 and STM32F4 MCU's, NXP's MCU's, Silicon Lab's MCU's, and others.
+- Full support for the ESP8266 (Tensilica Xtensa LX106) MCU architecture was
+  added! A step-by-step integration guide can be found
+  [here](https://mflt.io/esp8266-tutorial)
+- Add a convenience header to the SDK which allows users to include a single
+  header, `#include "memfault/components.h"`.
+- In cases where a device generates both a Trace Event and a Coredump, the
+  chances of receiving two emails and two new Issues is reduced. They should be
+  de-duplicated.
+- Fix an issue with compatibility around FreeRTOS, the FPU, and the IAR
+  compiler.
+- Improved support for STM32L4 and STM32F4 MCU's, NXP's MCU's, Silicon Lab's
+  MCU's, and others.
 - Improved support for the Mbed, nRF Connect SDK, Zephyr RTOS's.
 - For more details on the changes to the Firmware SDK that didn't make the
   changelog, check out the
