--- a/docs/embedded/arm-gcc-guide.mdx
+++ b/docs/embedded/arm-gcc-guide.mdx
@@ -16,11 +16,12 @@ Trace events make it easy to track the frequency at which unexpected errors are
 occurring on a running system.
 
 :::note
-Since all the data collected by the Memfault SDK is passed opaquely up
-to the Memfault cloud, after following this initial guide to send trace events
-no further changes will be needed on the transport side to send any of the
-other types of data which can be collected by the SDK (such as coredumps and
-metrics).
+
+Since all the data collected by the Memfault SDK is passed opaquely up to the
+Memfault cloud, after following this initial guide to send trace events no
+further changes will be needed on the transport side to send any of the other
+types of data which can be collected by the SDK (such as coredumps and metrics).
+
 :::
 
 Here's an example where Trace Events are captured for Bluetooth protocol CRC
@@ -109,9 +110,11 @@ configuration file named `memfault_trace_reason_user_config.def` which you need
 to create.
 
 :::caution
-The `memfault_trace_reason_user_config.def` file will get
-`#include`-ed, so make sure the directory in which you create the file is part
-of the header search paths.
+
+The `memfault_trace_reason_user_config.def` file will get `#include`-ed, so make
+sure the directory in which you create the file is part of the header search
+paths.
+
 :::
 
 To start, we recommend adding a "test" trace error reason you can easily trigger
@@ -232,8 +235,8 @@ need to push the data to the Memfault cloud ...
 Go to https://app.memfault.com/ and from the "Select A Project" dropdown, click
 on "Create Project" to setup your first project such as "smart-sink-dev".
 
-Then navigate to "Settings" -> "General", where you can find the "Project
-Key" which will be used to communicate with Memfault's web services.
+Then navigate to "Settings" -> "General", where you can find the "Project Key"
+which will be used to communicate with Memfault's web services.
 
 ### Publish data to the Memfault cloud
 
@@ -280,8 +283,10 @@ to the "Issues" page. Follow the link pointed to below and upload a symbol file.
 After this step you will see the trace in the list of issues!
 
 :::tip
+
 You can programatically upload symbol files with the
 [Memfault CLI tool](/docs/ci/install-memfault-cli).
+
 :::
 
 ### Troubleshooting Data Transfer
