--- a/docs/embedded/esp8266-rtos-sdk-guide.mdx
+++ b/docs/embedded/esp8266-rtos-sdk-guide.mdx
@@ -34,9 +34,11 @@ your system!
 ## Integration Steps
 
 :::caution
+
 This tutorial assumes you have a working
 [ESP8266 RTOS SDK environment](https://docs.espressif.com/projects/esp8266-rtos-sdk/en/latest/get-started/index.html)
 and are able to flash a board supported by the SDK.
+
 :::
 
 ### Add memfault-firmware-sdk and prepare port
@@ -145,8 +147,8 @@ index c06835b2..681db825 100644
 Go to https://app.memfault.com/ and from the "Select A Project" dropdown, click
 on "Create Project" to setup your first project such as "smart-sink-dev".
 
-Then navigate to "Settings" -> "General", where you can find the "Project
-Key" which will be used to communicate with Memfault's web services.
+Then navigate to "Settings" -> "General", where you can find the "Project Key"
+which will be used to communicate with Memfault's web services.
 
 Copy the "Project Key" for use in the next step.
 
@@ -157,7 +159,9 @@ tells memfault version information. You can copy the following template into the
 `memfault_port.c` file created in the first step:
 
 :::caution
+
 Be sure to fill in the appropriate.
+
 :::
 
 ```c
@@ -236,8 +240,10 @@ void your_background_task(void) {
 ```
 
 :::tip
+
 For testing, you can also force a post immediately by using the
 `mflt post_chunks` CLI command
+
 :::
 
 ### Force a Crash and Upload to Memfault
@@ -298,8 +304,10 @@ to the "Issues" page. Follow the link pointed to below and upload a symbol file.
 After this step you will see the trace in the list of issues!
 
 :::tip
+
 You can programatically upload symbol files with the
 [Memfault CLI tool](/docs/ci/install-memfault-cli).
+
 :::
 
 ### Troubleshooting Data Transfer
