--- a/docs/embedded/introduction.mdx
+++ b/docs/embedded/introduction.mdx
@@ -35,9 +35,11 @@ We have step-by-step guides which cover how to add the SDK to a project, capture
 an error, and publish data to the Memfault cloud:
 
 :::caution
-The following guides assume you already have a Memfault Account. If
-you don't yet have one, you can
+
+The following guides assume you already have a Memfault Account. If you don't
+yet have one, you can
 [create one here](https://memfault.typeform.com/to/zHsZBg?plan=starter).
+
 :::
 
 <center>
