--- a/docs/embedded/nrf-connect-sdk-guide.mdx
+++ b/docs/embedded/nrf-connect-sdk-guide.mdx
@@ -28,10 +28,12 @@ your system!
 ## Integration Steps
 
 :::caution
+
 This tutorial assumes you have a working
 [nRF Connect SDK Environment](https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/nrf/getting_started.html#getting-started)
 and are able to flash a board supported by the SDK (i.e nRF91, nRF53, nRF52,
 etc)
+
 :::
 
 ### Add memfault-firmware-sdk to nrf/west.yml
@@ -56,8 +58,10 @@ index 17071f47..84bb97f0 100644
 ```
 
 :::caution
-There's a couple lines in this file that look similar. Make sure you
-have added this under the "projects:" level.
+
+There's a couple lines in this file that look similar. Make sure you have added
+this under the "projects:" level.
+
 :::
 
 You will then need to run `west update` to clone the memfault-firmware-sdk:
@@ -116,8 +120,8 @@ $ git apply ${MEMFAULT_FIRMWARE_SDK}/ports/zephyr/v2.x/coredump-support.patch
 Go to https://app.memfault.com/ and from the "Select A Project" dropdown, click
 on "Create Project" to setup your first project such as "smart-sink-dev".
 
-Then navigate to "Settings" -> "General", where you can find the "Project
-Key" which will be used to communicate with Memfault's web services.
+Then navigate to "Settings" -> "General", where you can find the "Project Key"
+which will be used to communicate with Memfault's web services.
 
 ### Implement Platform Dependencies
 
@@ -357,8 +361,10 @@ to the "Issues" page. Follow the link pointed to below and upload a symbol file.
 After this step you will see the trace in the list of issues!
 
 :::tip
+
 You can programatically upload symbol files with the
 [Memfault CLI tool](/docs/ci/install-memfault-cli).
+
 :::
 
 ### Troubleshooting Data Transfer
