--- a/docs/embedded/self-serve-local-testing.mdx
+++ b/docs/embedded/self-serve-local-testing.mdx
@@ -13,8 +13,8 @@ import DefineFirstTraceEvent from "./steps/define-first-trace-event.mdx";
 import DefineFirstHeartbeat from "./steps/define-first-heartbeat.mdx";
 import AddCliTestCommands from "./steps/add-cli-test-commands.mdx";
 
-In this guide we will walk through how to add some initial data collection leveraging Memfault
-and verify that everything is working properly.
+In this guide we will walk through how to add some initial data collection
+leveraging Memfault and verify that everything is working properly.
 
 ### Define First Trace Event
 
@@ -42,6 +42,7 @@ and verify that everything is working properly.
 
 ### Next Steps
 
-With data collection verified locally, the final step is sending the data progamatically to the Memfault cloud.
+With data collection verified locally, the final step is sending the data
+progamatically to the Memfault cloud.
 
 <PublishDataToCloud />
