--- a/docs/embedded/steps/logging-dependency.mdx
+++ b/docs/embedded/steps/logging-dependency.mdx
@@ -1,15 +1,17 @@
-The Memfault SDK will (sparingly) emit diagnostic logs to alert of integration configuration problems.
-The logging subsystem can also easily serve as logging infrastructure for your own platform if you do not
-yet have one set up.
+The Memfault SDK will (sparingly) emit diagnostic logs to alert of integration
+configuration problems. The logging subsystem can also easily serve as logging
+infrastructure for your own platform if you do not yet have one set up.
 
 Based on your setup, choose one of the options below:
 
 <details>
   <summary>Platform does logging via Macros</summary>
 
-1. Add `#define MEMFAULT_PLATFORM_HAS_LOG_CONFIG 1` to `third_party/memfault/memfault_platform_config.h`
-2. Remap Memfault logging macros to platform logging macros by adding the following
-   macros to the `memfault_platform_log_config.h` file created earlier.
+1. Add `#define MEMFAULT_PLATFORM_HAS_LOG_CONFIG 1` to
+   `third_party/memfault/memfault_platform_config.h`
+2. Remap Memfault logging macros to platform logging macros by adding the
+   following macros to the `memfault_platform_log_config.h` file created
+   earlier.
 
 ```c
 //! @file memfault_platform_log_config.h
@@ -26,7 +28,8 @@ Based on your setup, choose one of the options below:
 <details>
   <summary>Platform has no logging or uses printf()</summary>
 
-Implement `memfault_platform_log()` in `third_party/memfault/memfault_platform_port.c`. For example,
+Implement `memfault_platform_log()` in
+`third_party/memfault/memfault_platform_port.c`. For example,
 
 ```c
 void memfault_platform_log(eMemfaultPlatformLogLevel level, const char *fmt, ...) {
