--- a/docs/platform/api-keys.mdx
+++ b/docs/platform/api-keys.mdx
@@ -4,7 +4,8 @@ title: API Keys
 sidebar_label: API Keys
 ---
 
-Memfault supports API keys as an authentication method. There are three types of API keys:
+Memfault supports API keys as an authentication method. There are three types of
+API keys:
 
 - User API keys
 - Organization API keys
@@ -16,12 +17,18 @@ For CI, you'll want an Organization-scoped API key.
 
 ### Organization-scoped
 
-Organization API keys can be managed by organization admins in the application under **Settings → Organization API Keys**. Organization-scoped API keys can only access resources belonging to a specific organization.
+Organization API keys can be managed by organization admins in the application
+under **Settings → Organization API Keys**. Organization-scoped API keys can
+only access resources belonging to a specific organization.
 
 ### User API Keys
 
-To generate a User API key, please read [the Auth section of our API documentation](https://api-docs.memfault.com/#authentication). Since users may belong to multiple organizations, User API keys give them access to all organizations of which they're a member.
+To generate a User API key, please read
+[the Auth section of our API documentation](https://api-docs.memfault.com/#authentication).
+Since users may belong to multiple organizations, User API keys give them access
+to all organizations of which they're a member.
 
 ### Project Keys
 
-Project keys can be generated on demand. [Please contact us](mailto:hello@memfault.com) if you'd like to have one.
+Project keys can be generated on demand.
+[Please contact us](mailto:hello@memfault.com) if you'd like to have one.
